refactoring of sonarlint issues